fix: icon width becomes too big on Safari

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,6 @@ button:not(:disabled), input[type="submit"]:not(:disabled) {
 }
 svg {
   fill: var(--text-color);
-  width: 100%;
+  margin: auto;
   height: 100%;
 }
